--- a/FDM_Hausarbeit-Literatur.bib
+++ b/FDM_Hausarbeit-Literatur.bib
@@ -76,4 +76,17 @@
   publisher = {Springer Science and Business Media {LLC}},
 }
 
+@Article{10.5334/egems.218,
+  author    = {Nicole G. Weiskopf and Suzanne Bakken and George Hripcsak and Chunhua Weng},
+  journal   = {{eGEMs} (Generating Evidence {\&} Methods to improve patient outcomes)},
+  title     = {A Data Quality Assessment Guideline for Electronic Health Record Data Reuse},
+  year      = {2017},
+  month     = {sep},
+  number    = {1},
+  pages     = {14},
+  volume    = {5},
+  doi       = {10.5334/egems.218},
+  publisher = {Ubiquity Press, Ltd.},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
