--- a/Hausarbeit_FDM_2021_LK.tex
+++ b/Hausarbeit_FDM_2021_LK.tex
@@ -162,6 +162,13 @@
 	\clearpage
 				
 	\chapter{Anhang}
+		\section{Übersicht über Dateistruktur und Versionierung}
+			\url{https://github.com/lknegendorf/Master-BIDS-FDM_Hausarbeit/wiki/%C3%9Cbersicht-%C3%BCber-Dateistruktur-und-Versionierung}
+		\section{Checksummen Übersicht Datensatz}
+			\url{https://github.com/lknegendorf/Master-BIDS-FDM_Hausarbeit/wiki/Checksummen-%C3%9Cbersicht-Datensatz}
+		\section{Mapping Tabellen FAIR Kriterien I1}
+			\url{https://github.com/lknegendorf/Master-BIDS-FDM_Hausarbeit/wiki/Mapping-Tabellen-FAIR-Kriterien-I1}
+
 		\section{Boxplots zu einzelnen LOINC CODES im Datensatz}
 			\begin{center}
 			\includegraphics[width=8cm]{Graphs/704-7.png}
